<resources>
    <string name="app_name">\u03BCWaveSym</string>
    <string name="action_settings">Settings</string>
    <string name="button_createNew">Create New Circuit</string>
    <string name="button_simulate">Simulate</string>
    <string name="button_results">Results</string>
    <string name="button_save">Save</string>
    <string name="button_update">Update</string>
    <string name="button_cancel">Cancel</string>
    <string name="components">Components</string>
    <string name="component_name">Component Name</string>
    <string name="drawer_open">Components open</string>
    <string name="drawer_close">Components close</string>
    <string name="teach_me">Teach Me</string>
    <string name="empty">empty</string>
    <string name="simulating">Simulating circuit...</string>
    <string name="circuit_parms">Circuit Parameters</string>
    <string name="center_frequency">Center Frequency (GHz)</string>
    <string name="substrate_height">Substrate Height (mm)</string>
    <string name="substrate_permittivity">Substrate Permittivity</string>
    <string name="antennas">Antennas</string>
    <string name="twoPortComponents">2-Port Components</string>
    <string name="onePortSources">1-Port Sources</string>
    <string-array name="drawer_componentCategories">
        <item>@string/antennas</item>
        <item>@string/twoPortComponents</item>
        <item>@string/onePortSources</item>
    </string-array>
    <string name="patch">Patch</string>
    <string name="dipole">Dipole</string>
    <string name="monopole">Monopole</string>
    <string name="loop">Loop</string>
    <string-array name="drawer_antennas">
        <item>@string/patch</item>
        <item>@string/dipole</item>
        <item>@string/monopole</item>
        <item>@string/loop</item>
    </string-array>
    <string name="info_patch">
        <![CDATA[
        A patch antenna is a type of radio antenna with a low profile, which can be mounted on a
        flat surface. It consists of a flat rectangular sheet or "patch" of metal, mounted over a
        larger sheet of metal called a ground plane. The two metal sheets together form a resonant
        piece of microstrip transmission line with a length of approximately one-half wavelength of
        the radio waves. The radiation mechanism arises from discontinuities at each truncated edge
        of the microstrip transmission line.
        ]]>
    </string>
    <string name="info_dipole">
        <![CDATA[
        A dipole antenna is the simplest and most widely used class of antenna. It consists of two
        identical conductive elements such as metal wires or rods, which are usually bilaterally
        symmetrical. A common example of a dipole is the "rabbit ears" television antenna found on
        broadcast television sets.
        <br><br>
        The most common form of dipole is two straight rods or wires oriented end to end on the same
        axis, with the feedline connected to the two adjacent ends. This is the simplest type of
        antenna from a theoretical point of view. Dipoles are resonant antennas, meaning that the
        elements serve as resonators, with standing waves of current flowing back and forth between
        their ends. Due to this current distribution a balun must be used to connect to a microstrip
        transmission line (more information about a balun can be seen in the balun component
        information box). So the length of the dipole elements is determined by the wavelength of the
        radio waves used.
        ]]>
    </string>
    <string name="info_monopole">
        <![CDATA[
        A <b>monopole</b> antenna is a very popular and commonly used antenna due to it’s compact size and
        favorable radiation characteristics. A simple monopole antenna is constructed by extending
        the signal line of a coaxial cable a quarter wavelength through a ground plane. The ground
        plane acts as a reflector, in the case of a monopole, and directs the radiation
        perpendicular to the antenna with a directivity of about 5 dB and creating a null along the
        direction of the antenna. A monopole is used for vehicle radios, cell phones, and most hand
        to hand communications.
        ]]>
    </string>
    <string name="info_loop">
        <![CDATA[
        This section will guide you through the design of a resonant <b>loop</b> antenna. A resonant loop
        antenna has a circumference of one wavelength with an input resistance of around 130 ohms.
        Due to the current distribution, a resonant loop antenna radiates normal to the plane of the
        loop with a directivity of about 3.4 dB and does not radiate along the plane of the loop.
        This current distribution also requires a balanced transmission line as a feed. A loop
        antenna can be either circular or square and can easily be made with copper wire.
        ]]>
    </string>
    <string name="balun">Balun</string>
    <string name="quarterTransformer">\u03BB/4 transformer</string>
    <string name="tLine">Transmission line</string>
    <string name="resistor">Series Resistor</string>
    <string name="resistor_shunt">Shunt Resistor</string>
    <string name="inductor">Series Inductor</string>
    <string name="inductor_shunt">Shunt Inductor</string>
    <string name="capacitor">Series Capacitor</string>
    <string name="capacitor_shunt">Shunt Capacitor</string>
    <string name="substrate">Substrate</string>
    <string-array name="drawer_twoPortComponents">
        <item>@string/balun</item>
        <item>@string/quarterTransformer</item>
        <item>@string/tLine</item>
        <item>@string/resistor</item>
        <item>@string/inductor</item>
        <item>@string/capacitor</item>
        <item>@string/resistor_shunt</item>
        <item>@string/inductor_shunt</item>
        <item>@string/capacitor_shunt</item>
        <item>@string/substrate</item>
    </string-array>
    <string name="info_balun">
       <![CDATA[
        A <b>balun</b> is an electrical device that converts between a balanced
        signal (two signals working against each other where ground is irrelevant) and an unbalanced
        signal (a single signal working against ground or pseudo-ground). A balun can take many forms
        and may include devices that also transform impedances but need not do so. Transformer baluns
        can also be used to connect lines of differing impedance. The origin of the word balun is
        \“<b>bal</b>anced to <b>un</b>balanced\”.
       ]]>
    </string>
    <string name="info_quarterTransformer">
        <![CDATA[
        A <b>quarter-wave impedance transformer</b>, often written as <b>\u03BB/4 impedance transformer</b>, is a
        component consisting of a length of transmission line or waveguide exactly one-quarter of a
        wavelength (\u03BB) long and terminated in some known impedance.
        ]]>
    </string>
    <string name="info_tLine">
        <![CDATA[
        In communications and electronic engineering, a <b>transmission line<b> is a specialized cable or
        other structure designed to carry alternating current of radio frequency, that is, currents
        with a frequency high enough that their wave nature must be taken into account. Transmission
        lines are used for purposes such as connecting radio transmitters and receivers with their
        antennas, distributing cable television signals, trunklines routing calls between telephone
        switching centers, computer network connections and high speed computer data buses.
       ]]>
    </string>
    <string name="info_resistor">
        <![CDATA[
        A <b>resistor</b> is a passive two-terminal electrical component that implements electrical
        resistance as a circuit element. Resistors act to reduce current flow, and, at the same
        time, act to lower voltage levels within circuits. In electronic circuits resistors are used
        to limit current flow, to adjust signal levels, bias active elements, terminate transmission
        lines among other uses. High-power resistors that can dissipate many watts of electrical
        power as heat may be used as part of motor controls, in power distribution systems, or as
        test loads for generators. Fixed resistors have resistances that only change slightly with
        temperature, time or operating voltage. Variable resistors can be used to adjust circuit
        elements (such as a volume control or a lamp dimmer), or as sensing devices for heat, light,
        humidity, force, or chemical activity.
        ]]>
    </string>
    <string name="info_inductor">
        <![CDATA[
        An <b>inductor</b> is a passive two-terminal electrical component which resists changes in electric
        current passing through it. It consists of a conductor such as a wire, usually wound into a
        coil. When a current flows through it, energy is stored temporarily in a magnetic field
        within the coil. Inductors have no effect at DC but as frequency increases an ideal inductor
        starts to look like an open circuit.
        ]]>
    </string>
    <string name="info_capacitor">
        <![CDATA[
        A <b>capacitor</b> is a passive two-terminal electrical component used to
        store energy electrostatically in an electric field. At DC a capacitor appears as an open
        circuit and as frequency increases it approaches a short circuit. The forms of practical
        capacitors vary widely, but all contain at least two electrical conductors (plates)
        separated by a dielectric (i.e. insulator). The conductors can be thin films, foils or
        sintered beads of metal or conductive electrolyte, etc. The nonconducting dielectric acts to
        increase the capacitor\'s charge capacity. A dielectric can be glass, ceramic, plastic film,
        air, vacuum, paper, mica, oxide layer etc. Capacitors are widely used as parts of electrical
        circuits in many common electrical devices. Unlike a resistor, an ideal capacitor does not
        dissipate energy. Instead, a capacitor stores energy in the form of an electrostatic field
        between its plates.
        ]]>
    </string>
    <string name="info_substrate">
        <![CDATA[
        A <b>substrate</b> is the mechanical support of a printed circuit board (PCB). Substrates have
        varying electrical properties, such as relative permittivity and loss tangent, that have a
        direct effect on the velocity of propagation and attenuation. Common substrates have a
        relative permittivity varying from 2-13 which in turn has an effect on the transmission line
        impedance (line width).
        ]]>
    </string>
    <string name="termination">Termination (50 \u03A9)</string>
    <string name="info_termination">
        <![CDATA[
        The termination is the reference plane for the simulation that is being conducted. Before
        the simulation can be carried out at least one termination must be included. In a two port
        system two terminations must be included and performance such as insertion loss and return
        loss can be simulated.
        ]]>
    </string>
    <string-array name="drawer_onePortComponents">
        <item>@string/termination</item>
    </string-array>
    <string name="blank"></string>
    <string name="unit_abbrev_hertz">Hz</string>
    <string name="unit_abbrev_meter">m</string>
    <string name="unit_abbrev_ohm">\u03A9</string>
    <string name="unit_abbrev_henry">H</string>
    <string name="unit_abbrev_farad">F</string>
    <string name="prefix_abbrev_pico">p</string>
    <string name="prefix_abbrev_nano">n</string>
    <string name="simulation_results">Simulation Results</string>
    <string name="mag_s11">mag(S11)</string>
    <string name="vswr">VSWR</string>
    <string name="ang_s11">angle(S11)</string>
    <string name="s11_db">dB(S11)</string>
    <string name="gain_db">dB(Gain)</string>
</resources>