<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.febtober.uwavesym.ParametersFragment" >

    <EditText
        android:id="@+id/et_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/center_frequency"
        android:inputType="numberDecimal" />
    <EditText
        android:id="@+id/et_substrate_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_frequency"
        android:hint="@string/substrate_height"
        android:inputType="numberDecimal" />
    <EditText
        android:id="@+id/et_substrate_permittivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_substrate_height"
        android:hint="@string/substrate_permittivity"
        android:inputType="numberDecimal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_substrate_permittivity" >
        <Button
            android:id="@+id/button_fragment_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_update" />
        <Button
            android:id="@+id/button_fragment_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel" />
    </LinearLayout>

</RelativeLayout>
