<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    tools:context="org.febtober.uwavesym.WorkspaceActivity"
    android:id="@+id/workspace_drawerLayout">

    <FrameLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal" >
            
            <ImageView
                android:id="@+id/image_component0"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/sym_blank" />

            <ImageView
                android:id="@+id/image_component1"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/sym_blank" />

            <ImageView
                android:id="@+id/image_component2"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/sym_blank" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:text="@string/button_simulate"
                    android:id="@+id/button_simulate"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:text="@string/button_results"
                    android:id="@+id/button_results"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:text="@string/button_save"
                    android:id="@+id/button_save"
                    android:layout_weight="1" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <ExpandableListView
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ff6cffff"
        android:id="@+id/workspace_leftDrawer" >

    </ExpandableListView>

</android.support.v4.widget.DrawerLayout>
